# ia-fellowship

./: README.md  dataset.json  dataset_targets.json  heuristic_cache_v1.json  heuristic_cache_v2.json  main.py  notes.md  output_cache_results_v1.json  output_cache_results_v2.json  output_results.json  output_results_v1.json  output_results_v2.json  pyproject.toml  results_25-11-06_22-44-53.json  test.ipynb
debug_outputs/: heuristic_cache.json  pdf_representation.txt
utils/: LLM.py  heuristic.py  pdf2mat.py  type_resolution.py
